// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary Component: Should render ExpenseSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      <p>
        Viewing 
        1
         expense totalling
         
        <span>
          $235.00
        </span>
      </p>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`ExpenseSummary Component: Should render ExpenseSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      <p
        className="page-header__title-bold"
      >
        Viewing 
        3
         expenses totalling
         
        <span>
          $12,500.00
        </span>
      </p>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
